--- a/obfuscape_wiki.html
+++ b/obfuscape_wiki.html
@@ -53,6 +53,86 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 <!--~~ Raw markup ~~-->
 
 
+<script>
+/*\
+title: $:/plugins/tiddlywiki/browser-storage/rawmarkup.js
+type: application/javascript
+module-type: library
+
+Startup code injected as raw markup
+
+\*/
+
+(function() {
+
+// Need to initialise these because we run before bootprefix.js and boot.js
+$tw = window.$tw || Object.create(null);
+$tw.hooks = $tw.hooks || { names: {}};
+$tw.boot = $tw.boot || {};
+$tw.boot.preloadDirty = $tw.boot.preloadDirty || [];
+
+// Hook the point in the startup process when the tiddlers have been loaded but plugins not unpacked
+var hookName = "th-boot-tiddlers-loaded";
+if(Object.prototype.hasOwnProperty.call($tw.hooks.names,hookName)) {
+	$tw.hooks.names[hookName].push(hookBootTiddlersLoaded);
+} else {
+	$tw.hooks.names[hookName] = [hookBootTiddlersLoaded];
+}
+
+// Load tiddlers from browser storage
+function hookBootTiddlersLoaded() {
+	var url = window.location.pathname,
+		log = [];
+	// Check that browser storage is available
+	try {
+		window.localStorage;
+	} catch(e) {
+		return;
+	}
+	// Step through each browsder storage item
+	for(var index=0; index<window.localStorage.length; index++) {
+		var key = window.localStorage.key(index),
+			parts = key.split("#");
+		// If it's ours
+		if(parts[0] === "tw5" && parts[1] === url) {
+			// Read it as JSON
+			var jsonString = window.localStorage.getItem(key),
+				jsonData;
+			if(jsonString) {
+				try {
+					jsonData = JSON.parse(jsonString);
+				} catch(e) {}
+				if(jsonData) {
+					// Convert it to a tiddler
+					var incomingTiddler = new $tw.Tiddler(jsonData);
+					if(incomingTiddler) {
+						// Get any existing tiddler
+						var title = incomingTiddler.fields.title,
+							existingTiddler = $tw.wiki.getTiddler(title);
+						if(existingTiddler && existingTiddler.isEqual(incomingTiddler)) {
+							// If the incoming tiddler is the same as the existing then we can delete the local storage version
+							window.localStorage.removeItem(key);
+						} else {
+							$tw.wiki.addTiddler(incomingTiddler);
+							log.push(title);
+						}
+					}
+				}
+			}
+		}
+	}
+	// Make sure that all the tiddlers we've loaded are marked as dirty at startup
+	Array.prototype.push.apply($tw.boot.preloadDirty,log);
+	// Save the log
+	$tw.wiki.addTiddler({
+		title: "$:/temp/BrowserStorage/Log",
+		text: $tw.utils.stringifyList(log)
+	});
+}
+
+})();
+
+</script>
 
 </head>
 <body class="tc-body">
@@ -165,6 +245,8 @@ Error message and password prompt
 
 <li>$:/state/add-plugin-info/$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html/$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.22/index.html/$:/plugins/tiddlywiki/mobiledragdrop</li>
 
+<li>$:/state/tab-1163638994</li>
+
 <li>$:/state/tab-1749438307</li>
 
 <li>$:/state/tab/moresidebar-1850697562</li>
@@ -174,6 +256,8 @@ Error message and password prompt
 <li>$:/status/RequireReloadDueToPluginChange</li>
 
 <li>$:/StoryList</li>
+
+<li>$:/temp/BrowserStorage/Log</li>
 
 <li>$:/temp/info-plugin</li>
 
@@ -380,6 +464,8 @@ Error message and password prompt
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
 <li>$:/themes/tiddlywiki/vanilla</li>
+
+<li>test</li>
 
 </ul>
 </p>
@@ -10073,20 +10159,26 @@ Error message and password prompt
 <div created="20201026025832039" modified="20201026025832039" title="$:/state/add-plugin-info/$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html/$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.22/index.html/$:/plugins/tiddlywiki/mobiledragdrop">
 <pre>yes</pre>
 </div>
+<div created="20201026030313848" modified="20201026030315977" title="$:/state/tab-1163638994">
+<pre>$:/core/ui/MoreSideBar/Plugins/Languages</pre>
+</div>
 <div created="20201026025624878" modified="20201026025624878" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Plugins</pre>
 </div>
-<div created="20201026011031140" modified="20201026011036109" title="$:/state/tab/moresidebar-1850697562">
+<div created="20201026011031140" modified="20201026030336425" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Plugins</pre>
 </div>
-<div created="20201026011025422" modified="20201026025622045" title="$:/state/tab/sidebar--595412856">
+<div created="20201026011025422" modified="20201026030331439" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
-<pre>yes</pre>
+<pre>no</pre>
 </div>
-<div created="20201026025622919" list="$:/ControlPanel GettingStarted" modified="20201026025622919" title="$:/StoryList">
+<div list="test GettingStarted" title="$:/StoryList">
 <pre></pre>
+</div>
+<div title="$:/temp/BrowserStorage/Log">
+<pre>$:/state/tab-1163638994</pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
 <pre>{
@@ -11204,6 +11296,9 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
         }
     }
 }</pre>
+</div>
+<div created="20201026030351825" modified="20201026030354819" tags="" title="test">
+<pre>test</pre>
 </div>
 
 
